# hyperion

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile  test.sh
.claude/: CLAUDE.md
.claude/rules/: development.md
data/: README.md  ai.yaml  bonuses.yaml  config.yaml  faction_generation.yaml  factions.yaml  game.yaml  map.yaml  modules.yaml  procedural_generation.yaml  races.yaml  ship-classes.yaml  simulation.yaml
data/countermeasures/: std.yaml
data/de-weapons/: std.yaml
data/impulse-engines/: std.yaml
data/maneuvering-thrusters/: std.yaml
data/missiles/: std.yaml
data/module-slots/: aux-support-system.yaml  cargo-bay.yaml  comms-system.yaml  cooling-system.yaml  countermeasure-system.yaml  de-weapon.yaml  deflector-plating.yaml  impulse-engine.yaml  kinetic-weapon.yaml  maneuvering-thruster.yaml  missile-launcher.yaml  power-core.yaml  radial-emission-system.yaml  sensor-array.yaml  shield-generator.yaml  stealth-system.yaml  torpedo-tube.yaml  warp-jump-core.yaml
data/power-cores/: std.yaml
data/ship-classes/: README.md  battleship.yaml  corvette.yaml  courier.yaml  cruiser.yaml  defender.yaml  destroyer.yaml  dreadnought.yaml  escort.yaml  freighter.yaml  frigate.yaml  hyperion.yaml  interceptor.yaml  scout.yaml  std.yaml  tanker.yaml  transport.yaml  warship.yaml
data/ship-modules/: std.yaml
data/ship-roles/: std.yaml
data/ship-sizes/: std.yaml
doc/: action-plan.md  api.md  blueprint-module-migration-action-plan.md  configuration-compatibility.md  game.md  implementing-cost-action-plan.md  module-implementation-plan.md  modules.md  ship-positions.md
docs/: architecture.md  game-design.md  hyperion.org
docs/brainstorming/: refactoring-opportunities.md
docs/plans/: 01-refactoring-action-plan.md  simulation-completeness.md
examples/: test_yaml_loading.rs
src/: api.rs  blueprint.rs  cli.rs  compiler.rs  config.rs  event_broadcaster.rs  events.rs  json.rs  lib.rs  logging.rs  main.rs  math.rs  models.rs  server.rs  server_routes.rs  ship.rs  ship_class.rs  simulation.rs  state.rs  stations.rs  websocket.rs
src/ai/: behavior_tree.rs  mod.rs  ships.rs  system.rs
src/api/: ai.rs  blueprints.rs  catalog.rs  factions.rs  generation.rs  lookup.rs  modules.rs  players.rs  ship_classes.rs  ships.rs  stations.rs  teams.rs
src/config/: ai.rs  bonus.rs  faction_gen.rs  game_settings.rs  map.rs  module.rs  ship_class.rs  simulation.rs  weapon.rs
src/ecs/: components.rs  resources.rs  systems.rs
src/generation/: factions.rs  galaxy.rs  history.rs  languages.rs  mod.rs  systems.rs
src/models/: blueprint.rs  player.rs  role.rs  ship.rs  status.rs  weapon.rs
src/simulation/: components.rs  loop.rs  mod.rs  module_state.rs  (+2 more)
tests/: integration_tests.rs
(+247 files in other folders)
