[package]
name = "hyperion"
version = "0.1.0"
edition = "2021"
authors = ["HYPERION Team"]
description = "A modular and customizable spaceship bridge simulation game"
license = "MIT"

[[bin]]
name = "hyperion"
path = "src/main.rs"

[lib]
name = "hyperion"
path = "src/lib.rs"

[dependencies]
# Web framework and GraphQL
rocket = { version = "0.5", features = ["json"] }
rocket_ws = "0.1"
rocket_cors = "0.6"
juniper = "0.16"
juniper_rocket = "0.9"

# Entity Component System
bevy_ecs = "0.14"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"

# Math and physics
nalgebra = "0.33"
rand = "0.8"

# Directory management
directories = "5.0"

[dev-dependencies]
# Testing
proptest = "1.4"
